--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.3
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
@@ -49,7 +50,7 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.2
 uvicorn==0.40.0
-uvloop==0.22.1
+uvloop==0.22.1; platform_system != "Windows"
 watchfiles==1.1.1
 websocket-client==1.9.0
 websockets==15.0.1
