feat: add example environment configuration and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,2 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-
-# Virtual Environment
-.venv/
-venv/
-ENV/
-
-# Environment Variables
-.env
-
-# IDE
-.idea/
-
-# Flask
-instance/
-.pytest_cache/
-
-# Distribution / packaging
-dist/
-build/
-*.egg-info/
-
-# OS
-.DS_Store
-Thumbs.db
-
-# SQLite
-*.sqlite3
-*.db
-*.sqlite
-*.db-journal
-*.sqlite-shm
-*.sqlite-wal
-
-# Frontend
-frontend/node_modules/
-frontend/dist/
-frontend/build/
+# Created by venv; see https://docs.python.org/3/library/venv.html
+*
