--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,11 @@
-alembic==1.13.3
+aiosqlite==0.22.1
+alembic==1.18.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
 bidict==0.23.1
 blinker==1.9.0
+build==1.4.0
 certifi==2025.11.12
 click==8.3.1
 colorzero==2.0
@@ -20,22 +22,32 @@ httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
 idna==3.11
+iniconfig==2.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jsonify==0.5
+Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+lgpio==0.2.2.0
+packaging==26.0
+pip-tools==7.5.2
+pluggy==1.6.0
 pydantic==2.12.5
 pydantic-extra-types==2.10.6
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
+pyproject_hooks==1.2.0
+pytest==9.0.2
+pytest-asyncio==1.3.0
 python-dotenv==1.2.1
 python-engineio==4.12.3
 python-multipart==0.0.21
 python-socketio==5.15.1
 PyYAML==6.0.3
+qrcode==8.2
 rich==14.2.0
 rich-toolkit==0.17.1
 rignore==0.7.6
@@ -44,17 +56,16 @@ setuptools==80.9.0
 shellingham==1.5.4
 simple-websocket==1.1.0
 SQLAlchemy==2.0.45
-aiosqlite==0.20.0
 starlette==0.50.0
 typer==0.20.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.2
 uvicorn==0.40.0
-uvloop==0.22.1; platform_system != "Windows"
+uvloop==0.22.1
 watchfiles==1.1.1
 websocket-client==1.9.0
 websockets==15.0.1
 Werkzeug==3.1.4
+wheel==0.46.3
 wsproto==1.3.2
-
