--- a/deploy/donationbox.service
+++ b/deploy/donationbox.service
@@ -18,7 +18,7 @@ NoNewPrivileges=true
 PrivateTmp=true
 ProtectSystem=strict
 ProtectHome=true
-ReadWritePaths=/var/lib/donationbox
+ReadWritePaths=/var/lib/donationbox /opt/donationbox
 
 [Install]
 WantedBy=multi-user.target
